--- a/index.html
+++ b/index.html
@@ -50,13 +50,18 @@
       <!-- team-section start -->
       <section class="teams display-flex">
         <div class="team-img-container">
-          <img src="images/team1.png" alt="two architect discussing about design">
-          <img src="images/team2.png" alt="">
-          <img src="images/team3.png" alt="">
-          <img src="images/team4.png" alt="">
+          <img
+            src="images/team1.png"
+            alt="two architect discussing about design"
+          />
+          <img src="images/team2.png" alt="" />
+          <img src="images/team3.png" alt="" />
+          <img src="images/team4.png" alt="" />
         </div>
         <div class="our-features">
-          <h3 class="section-title text-gray">Quick list of Our <span class="text-primary" id="feature-word">Features</span>
+          <h3 class="section-title text-gray">
+            Quick list of Our
+            <span class="text-primary" id="feature-word">Features</span>
           </h3>
           <p class="feature-description">
             There are many variations of passages of Lorem Ipsum available, but
@@ -67,45 +72,49 @@
         </div>
       </section>
       <!-- team section end -->
-       <!-- features will enjoy start -->
-        <section>
-          
-        </section>
-       <!-- features will enjoy end -->
-        <!-- some facts start -->
-         <section>
-          <h3 class="section-title">
-            Some Facts
-          </h3>
-          <p class="text-gray">
-            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
-          </p>
-          <div class="facts-container">
-            <!-- .fact*4>img.fact-icon+h4.fact-number+h5.fact-name -->
-            <div class="fact">
-              <img src="" alt="" class="fact-icon">
-              <h4 class="fact-number"></h4>
-              <h5 class="fact-name"></h5>
-            </div>
-            <div class="fact">
-              <img src="" alt="" class="fact-icon">
-              <h4 class="fact-number"></h4>
-              <h5 class="fact-name"></h5>
-            </div>
-            <div class="fact">
-              <img src="" alt="" class="fact-icon">
-              <h4 class="fact-number"></h4>
-              <h5 class="fact-name"></h5>
-            </div>
-            <div class="fact">
-              <img src="" alt="" class="fact-icon">
-              <h4 class="fact-number"></h4>
-              <h5 class="fact-name"></h5>
+      <!-- features will enjoy start -->
+      <section></section>
+      <!-- features will enjoy end -->
+      <!-- some facts start -->
+      <section>
+        <h3 class="section-title">Some Facts</h3>
+        <p class="text-gray fact-description">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration.
+        </p>
+        <div class="facts-container">
+          <!-- .fact-card*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+          <div class="fact-card display-flex">
+            <div>
+              <img src="images/icons/ribon.png" alt="" class="fact-icon" />
+              <h4 class="fact-number">54</h4>
+              <h5 class="fact-name">Awards Winnings</h5>
             </div>
           </div>
-         </section>
-        <!-- some facts end -->
-
+          <div class="fact-card display-flex">
+            <div>
+              <img src="images/icons/projects.png" alt="" class="fact-icon" />
+              <h4 class="fact-number">1458</h4>
+              <h5 class="fact-name">Projects Finish</h5>
+            </div>
+          </div>
+          <div class="fact-card display-flex">
+            <div>
+              <img src="images/icons/customers.png" alt="" class="fact-icon" />
+              <h4 class="fact-number">590</h4>
+              <h5 class="fact-name">Clients Worked</h5>
+            </div>
+          </div>
+          <div class="fact-card display-flex">
+            <div>
+              <img src="images/icons/customers.png" alt="" class="fact-icon" />
+              <h4 class="fact-number">590</h4>
+              <h5 class="fact-name">Clients Worked</h5>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- some facts end -->
     </main>
   </body>
 </html>
