--- a/index.html
+++ b/index.html
@@ -77,11 +77,13 @@
       <!-- features will enjoy end -->
       <!-- some facts start -->
       <section>
-        <h3 class="section-title">Some Facts</h3>
+        <div class="some-fact-info">
+          <h3 class="section-title">Some Facts</h3>
         <p class="text-gray fact-description">
           There are many variations of passages of Lorem Ipsum available, but
           the majority have suffered alteration.
         </p>
+        </div>
         <div class="facts-container">
           <!-- .fact-card*4>img.fact-icon+h4.fact-number+h5.fact-name -->
           <div class="fact-card display-flex">
@@ -115,6 +117,23 @@
         </div>
       </section>
       <!-- some facts end -->
+      <!-- our sponsor start here -->
+      <!-- .sponsor-info>h3.seciton-title{Our Sponsor}+p.text-gray -->
+      <div class="sponsor-info">
+        <h3 class="seciton-title">Our Sponsor</h3>
+        <p class="text-gray">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration.
+        </p>
+      </div>
+      <div class="sponsor-companies">
+       <img src="images/sponsors/amazon.png" alt="">
+       <img src="images/sponsors/figma.png" alt="">
+       <img src="images/sponsors/google.png" alt="">
+       <img src="images/sponsors/telerama.png" alt="">
+       <img src="images/sponsors/spotify.png" alt="">
+      </div>
+      <!-- our sponsor end here -->
     </main>
   </body>
 </html>
